[tool.poetry]
name = "vlrt-acc-switcher"
version = "1.6"
description = "Valorant Account Switcher"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygetwindow = "^0.0.9"
pyautogui = "^0.9.54"
pyscreeze = "^1.0.1"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"